; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/core/extr_btc_main.c_btc_enable_bluetooth.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/core/extr_btc_main.c_btc_enable_bluetooth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@btc_dm_sec_evt = common dso_local global i32 0, align 4
@BTA_SUCCESS = common dso_local global i64 0, align 8
@BTC_MAIN_ENABLE_FUTURE = common dso_local global i32 0, align 4
@FUTURE_FAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @btc_enable_bluetooth to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btc_enable_bluetooth() #0 {
  %1 = load i32, i32* @btc_dm_sec_evt, align 4
  %2 = call i64 @BTA_EnableBluetooth(i32 %1)
  %3 = load i64, i64* @BTA_SUCCESS, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %11

5:                                                ; preds = %0
  %6 = load i32, i32* @BTC_MAIN_ENABLE_FUTURE, align 4
  %7 = call i32* @btc_main_get_future_p(i32 %6)
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @FUTURE_FAIL, align 4
  %10 = call i32 @future_ready(i32 %8, i32 %9)
  br label %11

11:                                               ; preds = %5, %0
  ret void
}

declare dso_local i64 @BTA_EnableBluetooth(i32) #1

declare dso_local i32 @future_ready(i32, i32) #1

declare dso_local i32* @btc_main_get_future_p(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
